--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,8 +7,8 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Anuchit Chueprasertsakjklssp
-    tagline: Full Stack Developer
+    name: Anuchit Chueprasertsak
+    tagline: KUY KUY
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
